[package]
name = "rust-jwt-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "=9.1.0"
tokio = { version = "1.34.0", features = ["full"]}
warp = "0.3.6"
serde = { version = "1.0", features= ["derive"] }
serde_json = "1.0"
thiserror="1.0"
chrono="0.4"